Fixup openocd for Sipeed adapter

--- a/openocd.cfg
+++ b/openocd.cfg
@@ -6,28 +6,21 @@
 adapter driver ftdi
 ftdi_vid_pid 0x0403 0x6010
 
-ftdi_channel 1
+ftdi_channel 0
 
 transport select jtag
-adapter speed 2000
+adapter speed 8000
 
-ftdi_layout_init 0x00f8 0x00fb
-
-#ftdi_layout_signal nTRST -data 0x0400
-#ftdi_layout_signal nSRST -ndata 0x0020
-
-#reset_config srst_only srst_push_pull
-#adapter_nsrst_delay 100
-#adapter_nsrst_assert_width 100
-
-# source [find target/tgt_602.cfg]
+ftdi_layout_init 0x0508 0x0f1b
+ftdi_layout_signal nTRST -data 0x0200 -noe 0x0100
+ftdi_layout_signal nSRST -data 0x0800 -noe 0x0400
 
 set _CHIPNAME riscv
-jtag newtap $_CHIPNAME cpu -irlen 5 -expected-id 0x20000c05
+jtag newtap $_CHIPNAME cpu -irlen 5 -expected-id 0x0
 
 set _TARGETNAME $_CHIPNAME.cpu
 target create $_TARGETNAME.0 riscv -chain-position $_TARGETNAME
-$_TARGETNAME.0 configure -work-area-phys 0x22020000 -work-area-size 0x10000 -work-area-backup 1
+$_TARGETNAME.0 configure -work-area-phys 0x22020000 -work-area-size 0x10000 -work-area-backup 0
 
 echo "Ready for Remote Connections"
 
@@ -40,7 +33,7 @@ $_TARGETNAME.0 configure -event reset-deassert-post {
     echo "reset-deassert-post"
     adapter speed 4000
     reg mstatus 0x80000000
-    reg pc 0x21000000
+    reg pc 0x22008000
 }
 
 $_TARGETNAME.0 configure -event reset-init {
